# brightcove-rs-proxy

./: .env_sample  .gitignore  Cargo.toml  README.md
migrations/: 01_create_videos.sql
src/: brightcove.rs  db.rs  main.rs
