[package]
name = "brightcove-rs-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0"
http = "0.2.6"
openssl = { version = "0.10.38", features = ["vendored"] }
axum = "0.5.1"
axum-debug = "0.3.3"
anyhow = "1.0.56"
tower-http = { version = "0.2.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
